data/derived/comb/progs/unify/prog7985.ml.out
Characters 14-15:
  let _ = build(1, 0);;
                ^
Error: This expression has type int but an expression was expected of type
         int * int -> int
